Closed Bug 1220352 Opened 9 years ago Closed 5 years ago

Line box height should not grow to accommodate border and padding of non-replaced inline boxes

Categories

(Core :: Layout: Block and Inline, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox45 --- wontfix
firefox71 --- fixed

People

(Reporter: bugzilla, Assigned: dbaron)

References

(Blocks 2 open bugs)

Details

(Keywords: testcase)

Attachments

(1 file)

Vendor-prefixed tests --------------------- text-orientation: mixed - - - - - - - - - - - - http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s71-line-box-height-vrl-002.xht http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s71-line-box-height-vlr-003.xht http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s71-line-box-height-vrl-004.xht http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s71-line-box-height-vlr-005.xht text-orientation: sideways - - - - - - - - - - - - - http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s71-line-box-height-vrl-006.xht http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s71-line-box-height-vlr-007.xht http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s71-line-box-height-vrl-008.xht http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s71-line-box-height-vlr-009.xht text-orientation: upright - - - - - - - - - - - - - http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s71-line-box-height-vrl-010.xht http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s71-line-box-height-vlr-011.xht http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s71-line-box-height-vrl-012.xht http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s71-line-box-height-vlr-013.xht Expected results ---------------- text-orientation: mixed - - - - - - - - - - - - http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s71-line-box-height-vrl-002-ref.xht text-orientation: sideways - - - - - - - - - - - - - http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s71-line-box-height-vrl-006-ref.xht text-orientation: upright - - - - - - - - - - - - - http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/s71-line-box-height-vrl-010-ref.xht Explanation ----------- CSS 1, Section 4.4 The height of lines says "any padding, border or margin above and below non-replaced inline elements does not influence the height of the line. In other words: if the 'line-height' is too small for the chosen padding or border, it will overlap with text on other lines." http://www.w3.org/TR/CSS1/#the-height-of-lines CSS 2.1, Section 10.8.1 Leading and half-leading says "The height of the inline box encloses all glyphs and their half-leading on each side and is thus exactly 'line-height'. Boxes of child elements do not influence this height. Although margins, borders, and padding of non-replaced elements do not enter into the line box calculation, they are still rendered around inline boxes. This means that if the height specified by 'line-height' is less than the content height of contained boxes, backgrounds and colors of padding and borders may 'bleed' into adjoining line boxes." http://www.w3.org/TR/CSS21/visudet.html#line-height Notes ----- - This spun from bug 1130907 comment 18 and from examining attachment 8587980 [details] - More tests are available in bug 1130907 comment 18 - I have not yet submitted those tests to the test.csswg.org repository but I will, along with correspondent reference files - Those tests' filenames will most likely change when I submit them to test.csswg.org repository - Chrome 48.0.2547.0 passes the 6 vrl tests but fails the 6 vlr tests - Edge 12 has a bug on sizing orthogonal boxes so I can not say for sure how it handles those tests - I am using Firefox 45.0a1 buildID=20151030030236 and Firefox 45 fails the 8 mixed and upright tests (dominant baseline central) - I use Linux 3.16.0-66-generic x86_64, Qt: 4.8.6, KDE 4.14.3; Kubuntu (trusty) 14.04.03 LTS - I've searched for duplicates and did not find any
Blocks: writing-mode
Keywords: testcase
Flags: needinfo?(jfkthame)
> - Chrome 48.0.2547.0 passes the 6 vrl tests but fails the 6 vlr tests Chrome 48.0.2564.10 now passes all 12 tests, including the 6 vlr tests.
In all fairness, it must be said that Chrome 50.0.2661.102 and Chrome 52.0.2729.3 still fail http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/sizing-inline-content-with-border-vlr-003-draft2.xht and http://www.gtalbot.org/BrowserBugsSection/CSS3WritingModes/sizing-inline-content-with-border-vlr-003-draft.xht So, I will create and submit more tests to the test suite.
IE11 passes line-box-height-vlr-023.htm but fails line-box-height-vlr-021.htm for reasons not related to line box height, for reasons not specifically related to the target/goal of that test.
The duplicate has a pointer to code that I think is relevant.
Assignee: nobody → dbaron
Status: NEW → ASSIGNED

Here's a try run mainly to figure out which tests are now passing.

And here's a try run that I hope will pass.

Pushed by dbaron@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c5224a3d28a7 Make baseline positioning in vertical writing-mode independent of border and padding. r=jfkthame
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Summary: Line box height should not grow to accomodate border and padding of non-replaced inline boxes → Line box height should not grow to accommodate border and padding of non-replaced inline boxes
Flags: needinfo?(jfkthame)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: