Bug 1220352 - Make baseline positioning in vertical writing-mode independent of border and padding. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D47014